<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtGran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="Login"
            android:layout_marginBottom="16dp"
            android:textSize="30sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/campUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/User" />


        <EditText
            android:id="@+id/campPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password" />



        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onClick"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/Guardar" />

            <Button
                android:id="@+id/btnCarregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:onClick="onClick"
                android:text="@string/Carregar" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

            <TextView
                android:id="@+id/txtPass"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>